Fixed wrong file separator

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
@@ -23,19 +23,19 @@
   <p class=para>The default organization for new projects can be changed on the 
     preference pages (<b>Window</b> &gt; <b>Preferences</b> &gt; <b>Java &gt; 
     New Project</b>).</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-13.htm">Creating a Java project as its own source 
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="../tasks/tasks-13.htm">Creating a Java project as its own source 
     container</a><br>
-    <a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
-    <a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
-    <a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
-    <a href="..\tasks\tasks-11.htm">Creating Java elements</a></p>
+    <a href="../tasks/tasks-14.htm">Creating a Java project with source folders</a><br>
+    <a href="../tasks/tasks-17.htm">Creating a new Java class</a><br>
+    <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
+    <a href="../tasks/tasks-11.htm">Creating Java elements</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
