--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
@@ -47,27 +47,27 @@ done.</p>
 <p class=para><b>Note:</b> the default (unnamed) package always exist and does
 not need to be created.</p>
 
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
 
-<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+<p><a href="../concepts/concepts-3.htm">Java projects</a></p>
 
 <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
 
-<p><a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
-<a href="..\tasks\tasks-51.htm">Moving folders, packages, and files</a><br>
-<a href="..\tasks\tasks-12.htm">Organizing Java projects</a><br>
+<p><a href="tasks-11.htm">Creating Java elements</a><br>
+<a href="tasks-51.htm">Moving folders, packages, and files</a><br>
+<a href="tasks-12.htm">Organizing Java projects</a><br>
 <a href="tasks-77.htm">Opening a package</a><br>
-<a href="..\tasks\tasks-90.htm">Renaming a package</a></p>
+<a href="tasks-90.htm">Renaming a package</a></p>
 
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
 
-<p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+<p><a href="../reference/ref-90.htm">Package Explorer</a></p>
 
 <p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+<img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 
 </div>
 
