--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-18.htm
@@ -67,19 +67,19 @@
   </ol>
   <p class=para> 11.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span> 
     Click <span class=label><b>Finish</b></span> when you are done.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
-    <a href="..\tasks\tasks-19.htm">Creating a nested class</a><br>
-    <a href="..\tasks\tasks-20.htm">Creating a class in an existing compilation 
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-17.htm">Creating a new Java class</a><br>
+    <a href="tasks-19.htm">Creating a nested class</a><br>
+    <a href="tasks-20.htm">Creating a class in an existing compilation 
     unit</a><br>
-    <a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a><br>
+    <a href="tasks-94.htm">Renaming a class, field, or interface</a><br>
     &nbsp;</p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
