--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
@@ -17,23 +17,23 @@
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Type the code for the class at the desired position in the compilation 
     unit.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
-    <a href="..\tasks\tasks-18.htm">Creating a standalone class</a><br>
-    <a href="..\tasks\tasks-19.htm">Creating a nested class</a><br>
-    <a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
-    <a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a><br>
-    <a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a><br>
-    <a href="..\tasks\tasks-129.htm">Setting execution arguments</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-17.htm">Creating a new Java class</a><br>
+    <a href="tasks-18.htm">Creating a standalone class</a><br>
+    <a href="tasks-19.htm">Creating a nested class</a><br>
+    <a href="tasks-57.htm">Generating accessors</a><br>
+    <a href="tasks-94.htm">Renaming a class, field, or interface</a><br>
+    <a href="tasks-92.htm">Renaming a compilation unit</a><br>
+    <a href="tasks-129.htm">Setting execution arguments</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
