--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
@@ -51,22 +51,22 @@ class=label> <b>Select the resources to export </b></span>field </p>
         manifest.</li>
     </ul>
   </ol>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-113.htm">Adding a JAR file to the build path</a><br>
-    <a href="..\tasks\tasks-115.htm">Attaching source to a JAR file</a><br>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-113.htm">Adding a JAR file to the build path</a><br>
+    <a href="tasks-115.htm">Attaching source to a JAR file</a><br>
     <a href="tasks-36a.htm">Creating a JAR description</a><br>
     <a href="tasks-35.htm">Defining the JAR file's manifest</a><br>
-    <a href="..\tasks\tasks-36b.htm">Editing a JAR description</a><br>
-    <a href="..\tasks\tasks-34.htm">Setting advanced options</a></p>
+    <a href="tasks-36b.htm">Editing a JAR description</a><br>
+    <a href="tasks-34.htm">Setting advanced options</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
