--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
@@ -65,17 +65,17 @@
     <li class=MsoNormal style='     '>Click <span class=label><b>Finish</b></span>. 
       This will create the JAR and optionally a JAR description.</li>
   </ol>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-33.htm">Creating a new JAR file</a><br>
-    <a href="..\tasks\tasks-36a.htm">Creating a JAR description</a><br>
-    <a href="..\tasks\tasks-36b.htm">Editing a JAR description</a><br>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-33.htm">Creating a new JAR file</a><br>
+    <a href="tasks-36a.htm">Creating a JAR description</a><br>
+    <a href="tasks-36b.htm">Editing a JAR description</a><br>
     <a href="tasks-34.htm">Setting advanced options</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
