--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
@@ -26,17 +26,17 @@
       the view is opened on an interface). The selected type is always shown in 
       the top-left corner.</li>
   </ul>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-6.htm">Java views</a></p>
+  <p><a href="../concepts/concepts-6.htm">Java views</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\delete\tasks-37.htm">Using the Hierarchy view</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="../delete\tasks-37.htm">Using the Hierarchy view</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-24.htm">Views and editors</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-24.htm">Views and editors</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
