--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
@@ -39,21 +39,21 @@ works only for classes and interfaces).</li>
 </ul>
 </ul>
 
-<p><br><img SRC="..\images\ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a>
-<p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
-<p><a href="..\tasks\tasks-7.htm">Changing new type hierarchy defaults</a>
-<br><a href="..\tasks\tasks-11.htm">Creating Java elements</a>
-<br><a href="..\tasks\tasks-39.htm">Opening a type hierarchy on a Java
+<p><br><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
+<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
+<p><a href="tasks-7.htm">Changing new type hierarchy defaults</a>
+<br><a href="tasks-11.htm">Creating Java elements</a>
+<br><a href="tasks-39.htm">Opening a type hierarchy on a Java
 element</a>
-<br><a href="..\tasks\tasks-40.htm">Opening a type hierarchy on the current
+<br><a href="tasks-40.htm">Opening a type hierarchy on the current
 text selection</a>
-<br><a href="..\tasks\tasks-41.htm">Opening a type hierarchy in the workbench</a>
-<br><a href="..\tasks\tasks-42.htm">Opening a type hierarchy in its own
+<br><a href="tasks-41.htm">Opening a type hierarchy in the workbench</a>
+<br><a href="tasks-42.htm">Opening a type hierarchy in its own
 perspective</a>
-<br><a href="..\delete\tasks-37.htm">Using the Hierarchy view</a>
+<br><a href="../delete\tasks-37.htm">Using the Hierarchy view</a>
 <br>&nbsp;
-<p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195></div>
+<p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195></div>
 
 </body>
 </html>
