--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
@@ -23,13 +23,13 @@
     </span> Ensure that the <span class=filename>&nbsp;<b>Hide anonymous inner 
     class files</b></span>&nbsp;filter is selected.</p>
   <p class=para><img width=159 height=27 id="_x0000_i1025"
-src="..\images\ngrelt.gif" alt="Related tasks" border=0></p>
+src="../images/ngrelt.gif" alt="Related tasks" border=0></p>
   <p class=para><a href="tasks-2.htm">Showing and hiding files</a></p>
   <p class=para><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p class=para><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p class=para><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
