--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
@@ -24,20 +24,20 @@ class=label><b>Show All Inherited Members</b></span> button is toggled on in ord
     </span> From the pop-up menu of one of the inherited methods, select <span
 class=label><b>Override in <i>class name</i></b></span> (where <i>class name</i> 
     is the name of the class in which the method will be created).</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-87.htm">Extracting a method</a><br>
-    <a href="..\tasks\tasks-44.htm">Finding overridden methods</a><br>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-87.htm">Extracting a method</a><br>
+    <a href="tasks-44.htm">Finding overridden methods</a><br>
     <a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
-    <a href="..\tasks\tasks-96.htm">Renaming a method</a></p>
+    <a href="tasks-96.htm">Renaming a method</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"><br>
-    <a href="..\reference\rinmeth.htm">Inherited methods</a></p>
+src="../images/ngrelr.gif" alt="Related reference"><br>
+    <a href="../reference/rinmeth.htm">Inherited methods</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
