--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
@@ -24,17 +24,17 @@
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> In the text field below, specify the desired patterns (names matching 
     one of the patterns will be hidden).</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-3.htm">Showing and hiding system files</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-3.htm">Showing and hiding system files</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
