--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
@@ -40,19 +40,19 @@ units. This can result in compilation errors. If you use the <b>Refactor</b>
 to classes defined in the selected compilation units will be updated as
 well.</div>
 
-<p><br><img SRC="..\images\ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
-<p><a href="..\concepts\concepts-3.htm">Java projects</a>
-<br><a href="..\concepts\concepts-9.htm">Refactoring support</a>
-<p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
-<p><a href="..\tasks\tasks-15.htm">Creating a new Java package</a>
-<br><a href="..\tasks\tasks-85.htm">Copying and moving Java elements</a>
+<p><br><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
+<p><a href="../concepts/concepts-3.htm">Java projects</a>
+<br><a href="../concepts/concepts-9.htm">Refactoring support</a>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
+<p><a href="tasks-15.htm">Creating a new Java package</a>
+<br><a href="tasks-85.htm">Copying and moving Java elements</a>
 <br><a href="tasks-77.htm">Opening a package</a>
-<br><a href="..\tasks\tasks-90.htm">Renaming a package</a>
-<p><img SRC="..\images\ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
-<p><a href="..\reference\ref-90.htm">Package Explorer</a>
-<br><a href="..\reference\ref-116.htm">Refactoring actions</a>
+<br><a href="tasks-90.htm">Renaming a package</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
+<p><a href="../reference/ref-90.htm">Package Explorer</a>
+<br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
-<p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195></div>
+<p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195></div>
 
 </body>
 </html>
