--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
@@ -33,17 +33,17 @@
   </ol>
   <br>
   &nbsp; 
-  <p><img SRC="..\images\ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159> 
-  <p><a href="..\concepts\concepts-7.htm">Java editor</a> 
-  <p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159> 
-  <p><a href="..\tasks\tasks-58.htm">Managing import statements</a> <br>
-    <a href="..\tasks\tasks-60.htm">Organizing existing import statements</a> 
+  <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159> 
+  <p><a href="../concepts/concepts-7.htm">Java editor</a> 
+  <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159> 
+  <p><a href="tasks-58.htm">Managing import statements</a> <br>
+    <a href="tasks-60.htm">Organizing existing import statements</a> 
     <br>
-    <a href="..\tasks\tasks-61.htm">Setting the order of import statements</a> 
-  <p><img SRC="..\images\ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159> 
-  <p><a href="..\reference\ref-116.htm">Refactoring actions</a> <br>
+    <a href="tasks-61.htm">Setting the order of import statements</a> 
+  <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159> 
+  <p><a href="../reference/ref-116.htm">Refactoring actions</a> <br>
     &nbsp; 
-  <p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195> 
+  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195> 
 </div>
 </body>
 </html>
