--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -23,21 +23,21 @@
   <p class=MsoNormal>Note: Files and Java elements such as types and their members 
     change in time. A &#8216;snapshot&#8217; of what they look like at&nbsp; a 
     point in time (as saved in the local history) is called an edition. </p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
-    <a href="..\concepts\concepts-6.htm">Java views</a></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
+    <a href="../concepts/concepts-6.htm">Java views</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-63.htm">Replacing a Java element with a local history 
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-63.htm">Replacing a Java element with a local history 
     edition</a><br>
-    <a href="..\tasks\tasks-64.htm">Restoring a deleted workbench element</a></p>
+    <a href="tasks-64.htm">Restoring a deleted workbench element</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a><br>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-90.htm">Package Explorer</a><br>
     &nbsp;</p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
