--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
@@ -27,16 +27,16 @@ style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <p class=head> <span style='font-family:Symbol'>·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span></span> Selecting <b>Source &gt; Format</b> from the menu bar.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
-    <a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
+    <a href="../concepts/concepts-7.htm">Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
-    <a href="..\tasks\tasks-68.htm">Setting code formatting preferences</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-66.htm">Formatting Java code</a><br>
+    <a href="tasks-68.htm">Setting code formatting preferences</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
