--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
@@ -24,15 +24,15 @@ class=label><b>Line Splitting, </b>and<b> Style</b></span> tabs, select the code
     code will look like.</p>
   <p class=head> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Click <span class=label><b>OK</b></span> when you are done.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
-    <a href="..\tasks\tasks-67.htm">Formatting files or portions of code</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-66.htm">Formatting Java code</a><br>
+    <a href="tasks-67.htm">Formatting files or portions of code</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
