--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -20,20 +20,20 @@ class=label><b>Show in Package Explorer</b></span>. If the Package Explorer
   <p class=para>Note: The element might not be revealed if Package Explorer filters 
     are active or the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; 
     Show Members in Package Explorer</b> preference is unselected. </p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-6.htm">Java views</a></p>
+  <p><a href="../concepts/concepts-6.htm">Java views</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-129.htm">Setting execution arguments</a><br>
-    <a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a><br>
-    <a href="..\tasks\tasks-75.htm">Opening a type in the Package Explorer</a><br>
-    <a href="..\tasks\tasks-60.htm">Organizing existing import statements</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-129.htm">Setting execution arguments</a><br>
+    <a href="tasks-92.htm">Renaming a compilation unit</a><br>
+    <a href="tasks-75.htm">Opening a type in the Package Explorer</a><br>
+    <a href="tasks-60.htm">Organizing existing import statements</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
