--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
@@ -27,18 +27,18 @@
     type is displayed in the Package Explorer.</p>
   <p class=para><b>Note:</b> Revealing may not be possible if Package Explorer 
     filters are applied.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the 
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-74.htm">Showing a type's compilation unit in the 
     Package Explorer</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
