--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
@@ -26,19 +26,19 @@
     list. 
   <p class="para"> 4.<span style='font:7.0pt "Times New Roman"'></span> Click&nbsp;<span class=label><b>OK</b></span> 
     when you are done. An editor opens on the selected type. 
-  <p><img SRC="..\images\ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159> 
-  <p><a href="..\concepts\concepts-7.htm">Java editor</a> 
-  <p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159> 
-  <p><a href="..\tasks\tasks-115.htm">Attaching source to a JAR file</a> <br>
-    <a href="..\tasks\tasks-73.htm">Opening an editor for a selected element</a> 
+  <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159> 
+  <p><a href="../concepts/concepts-7.htm">Java editor</a> 
+  <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159> 
+  <p><a href="tasks-115.htm">Attaching source to a JAR file</a> <br>
+    <a href="tasks-73.htm">Opening an editor for a selected element</a> 
     <br>
-    <a href="..\tasks\tasks-54.htm">Using the Java editor</a> <br>
+    <a href="tasks-54.htm">Using the Java editor</a> <br>
     &nbsp; 
-  <p><img SRC="..\images\ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159> 
-  <p><a href="..\reference\ref-5.htm">Java editor actions</a> <br>
-    <a href="..\reference\ref-24.htm">Views and editors</a> <br>
+  <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159> 
+  <p><a href="../reference/ref-5.htm">Java editor actions</a> <br>
+    <a href="../reference/ref-24.htm">Views and editors</a> <br>
     &nbsp; 
-  <p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195> 
+  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195> 
 </div>
 </body>
 </html>
