--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
@@ -42,21 +42,21 @@ class=label><b>Finish</b></span> to acknowledge the problems. The refactoring
     is carried out, and the wizard closes. If you chose in the Refactoring Preferences 
     page to be notified of any problems afterwards, then any detected problems 
     are displayed at this time.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-9.htm">Refactoring support</a></p>
+  <p><a href="../concepts/concepts-9.htm">Refactoring support</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-83.htm">Refactoring with preview</a><br>
-    <a href="..\tasks\tasks-100.htm">Undoing a refactoring operation</a><br>
-    <a href="..\tasks\tasks-101.htm">Redoing a refactoring operation</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-83.htm">Refactoring with preview</a><br>
+    <a href="tasks-100.htm">Undoing a refactoring operation</a><br>
+    <a href="tasks-101.htm">Redoing a refactoring operation</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-116.htm">Refactoring actions</a><br>
-    <a href="..\reference\ref-117.htm">Refactoring wizard</a><br>
-    <a href="..\reference\ref-23.htm">Refactoring preferences</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-116.htm">Refactoring actions</a><br>
+    <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+    <a href="../reference/ref-23.htm">Refactoring preferences</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
