--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
@@ -60,14 +60,14 @@ class=label><b>Copy</b></span>
   <p class="para">You can also copy Java elements by dragging them and dropping 
     in the desired new location. You will need to have <b>Ctrl</b> pressed while 
     dragging to copy the elements. 
-  <p><img SRC="..\images\ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159> 
-  <p><a href="..\concepts\concepts-3.htm">Java projects</a> 
-  <p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159> 
-  <p><a href="..\tasks\tasks-11.htm">Creating Java elements</a> <br>
-    <a href="..\tasks\tasks-51.htm">Moving folders, packages, and files</a> <br>
+  <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159> 
+  <p><a href="../concepts/concepts-3.htm">Java projects</a> 
+  <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159> 
+  <p><a href="tasks-11.htm">Creating Java elements</a> <br>
+    <a href="tasks-51.htm">Moving folders, packages, and files</a> <br>
     <a href="tasks-85.htm">Copying and moving Java elements</a> <br>
     &nbsp; 
-  <p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195> 
+  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195> 
 </div>
 </body>
 </html>
