--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
@@ -59,24 +59,24 @@
     file, add a line with the name of the output folder (&quot;bin&quot; for example). 
     Adding the output folder in the .cvsignore file ensures that the CVS versioning 
     support ignores the output folder in versioning operations.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-3.htm">Java projects</a><br>
-    <a href="..\concepts\concepts-4.htm">Java builder</a></p>
+  <p><a href="../concepts/concepts-3.htm">Java projects</a><br>
+    <a href="../concepts/concepts-4.htm">Java builder</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
   <p><a href="tasks-26.htm">Creating a new source folder</a><br>
-    <a href="..\tasks\tasks-13.htm">Creating a Java project as its own source 
+    <a href="../tasks/tasks-13.htm">Creating a Java project as its own source 
     container</a><br>
-    <a href="..\tasks\tasks-15.htm">Creating a new Java package</a><br>
-    <a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
-    <a href="..\tasks\tasks-25.htm">Creating a new interface in a compilation 
+    <a href="../tasks/tasks-15.htm">Creating a new Java package</a><br>
+    <a href="../tasks/tasks-17.htm">Creating a new Java class</a><br>
+    <a href="../tasks/tasks-25.htm">Creating a new interface in a compilation 
     unit</a><br>
-    <a href="..\tasks\tasks-149.htm">Creating a Java scrapbook page</a><br>
-    <a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
-    <a href="..\tasks\tasks-12.htm">Organizing Java projects</a></p>
+    <a href="../tasks/tasks-149.htm">Creating a Java scrapbook page</a><br>
+    <a href="../tasks/tasks-11.htm">Creating Java elements</a><br>
+    <a href="../tasks/tasks-12.htm">Organizing Java projects</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
