--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-19.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-19.htm
@@ -60,18 +60,18 @@ class=label><b>Source Folder</b></span> field as the container for the new class
     </span> Click <span class=label><b>Finish</b></span> when you are done.</p>
   <p class=para><b>Note:</b> The new class is created in the same compilation 
     unit as its enclosing type.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
-    <a href="..\tasks\tasks-18.htm">Creating a standalone class</a><br>
-    <a href="..\tasks\tasks-20.htm">Creating a class in an existing compilation 
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-17.htm">Creating a new Java class</a><br>
+    <a href="tasks-18.htm">Creating a standalone class</a><br>
+    <a href="tasks-20.htm">Creating a class in an existing compilation 
     unit</a><br>
-    <a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a></p>
+    <a href="tasks-94.htm">Renaming a class, field, or interface</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
