--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
@@ -39,20 +39,20 @@
   <p>&nbsp;&nbsp;&nbsp; Select the container where you want the new package to 
     reside. Then, select from the menu bar <b>File</b> &gt; <b>New</b> &gt; <b>Interface</b> 
   </p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
   <p><a href="tasks-22.htm">Opening the New Interface wizard</a><br>
-    <a href="..\tasks\tasks-24.htm">Creating a nested interface</a><br>
-    <a href="..\tasks\tasks-23.htm">Creating a standalone interface</a><br>
-    <a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a></p>
+    <a href="tasks-24.htm">Creating a nested interface</a><br>
+    <a href="tasks-23.htm">Creating a standalone interface</a><br>
+    <a href="tasks-94.htm">Renaming a class, field, or interface</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
