--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-25.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-25.htm
@@ -15,22 +15,22 @@
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Type the code for the interface at the desired position in the compilation 
     unit.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-24.htm">Creating a nested interface</a><br>
-    <a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
-    <a href="..\tasks\tasks-23.htm">Creating a standalone interface</a><br>
-    <a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-24.htm">Creating a nested interface</a><br>
+    <a href="tasks-26.htm">Creating a new source folder</a><br>
+    <a href="tasks-23.htm">Creating a standalone interface</a><br>
+    <a href="tasks-11.htm">Creating Java elements</a><br>
     <a href="tasks-22.htm">Opening the New Interface wizard</a><br>
-    <a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a></p>
+    <a href="tasks-92.htm">Renaming a compilation unit</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
