--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
@@ -23,14 +23,14 @@
   <p class="para"> 2.<span style='font:7.0pt "Times New Roman"'></span> Ensure 
     that the "<b>hide&nbsp;<span></span>.*files</b>" filter is selected. This 
     hides files that have only a file extension but no file name, such as&nbsp;<span class=filename>.classpath</span>. 
-  <p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159> 
-  <p><a href="..\tasks\tasks-2.htm">Showing and hiding files</a> <br>
-    <a href="..\tasks\tasks-47.htm">Filtering elements</a> 
-  <p><img SRC="..\images\ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159> 
-  <p class="para"><a href="..\reference\ref-90.htm">Package Explorer</a> 
+  <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159> 
+  <p><a href="tasks-2.htm">Showing and hiding files</a> <br>
+    <a href="tasks-47.htm">Filtering elements</a> 
+  <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159> 
+  <p class="para"><a href="../reference/ref-90.htm">Package Explorer</a> 
     <br>
     &nbsp; 
-  <p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195> 
+  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195> 
 </div>
 </body>
 </html>
