--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
@@ -33,17 +33,17 @@ class=label><b>Save the description of this JAR in the workspace</b></span> chec
     </span> Click <span class=label><b>Finish</b></span> to create the JAR file 
     immediately or <span class=label><b>Next</b></span> if you want to change 
     the default manifest.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-33.htm">Creating a new JAR file</a><br>
-    <a href="..\tasks\tasks-35.htm">Defining the JAR file's manifest</a><br>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-33.htm">Creating a new JAR file</a><br>
+    <a href="tasks-35.htm">Defining the JAR file's manifest</a><br>
     <a href="tasks-36a.htm">Creating a JAR description</a><br>
     &nbsp;</p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
