--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
@@ -19,19 +19,19 @@
   <p><b>Note:</b> If the selected Java element (or editor selection) is not a 
     type or a compilation unit, the hierarchy will be open on the type in which 
     the current selection lies.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-7.htm">Changing new type hierarchy defaults</a><br>
-    <a href="..\tasks\tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
-    <a href="..\tasks\tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
-    <a href="..\tasks\tasks-41.htm">Opening a type hierarchy in the workbench</a><br>
-    <a href="..\tasks\tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
-    <a href="..\delete\tasks-37.htm">Using the Hierarchy view</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-7.htm">Changing new type hierarchy defaults</a><br>
+    <a href="tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
+    <a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
+    <a href="tasks-41.htm">Opening a type hierarchy in the workbench</a><br>
+    <a href="tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
+    <a href="../delete\tasks-37.htm">Using the Hierarchy view</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
