--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
@@ -22,20 +22,20 @@
   <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Select the methods and press OK.</p>
   <p class=para><img width=159 height=27 id="_x0000_i1025"
-src="..\images\ngrelc.gif" alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-7.htm">Java editor</a><br>
-    <a href="..\concepts\concepts-3.htm">Java projects</a></p>
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a><br>
+    <a href="../concepts/concepts-3.htm">Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-54.htm">Using the Java editor</a><br>
-    <a href="..\tasks\tasks-20.htm">Creating a class in an existing compilation 
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-54.htm">Using the Java editor</a><br>
+    <a href="tasks-20.htm">Creating a class in an existing compilation 
     unit</a><br>
     &nbsp;</p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-102.htm">Outline view for Java</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-102.htm">Outline view for Java</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
