--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
@@ -19,12 +19,12 @@ class=label><b>Show Source of Selected Element Only</b></span> button in the wor
     Only</b></span><b></b>button in the workbench toolbar (so that it is de-pressed). 
   <p><b>Note:</b> this toolbar button is enabled only when a Java editor is open. 
     <br>
-    <img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159> 
-  <p><a href="..\tasks\tasks-2.htm">Showing and hiding files</a> 
-  <p><img SRC="..\images\ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159> 
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a> <br>
+    <img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159> 
+  <p><a href="tasks-2.htm">Showing and hiding files</a> 
+  <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159> 
+  <p><a href="../reference/ref-90.htm">Package Explorer</a> <br>
     &nbsp; 
-  <p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195> 
+  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195> 
 </div>
 </body>
 </html>
