--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
@@ -26,21 +26,21 @@
     </span> The Java editor generates a complete list of import statements, as 
     specified by the import order preference, and new import statements replace 
     the old ones.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-59.htm">Adding required import statements</a><br>
-    <a href="..\tasks\tasks-58.htm">Managing import statements</a><br>
-    <a href="..\tasks\tasks-61.htm">Setting the order of import statements</a><br>
-    <a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the Package 
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-59.htm">Adding required import statements</a><br>
+    <a href="tasks-58.htm">Managing import statements</a><br>
+    <a href="tasks-61.htm">Setting the order of import statements</a><br>
+    <a href="tasks-74.htm">Showing a type's compilation unit in the Package 
     Explorer view</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-116.htm">Refactoring actions</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-116.htm">Refactoring actions</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
