--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
@@ -36,19 +36,19 @@
     is used. This number is called the import threshold.</p>
   <p class=head> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Click <span class=label><b>OK</b></span> when you are done.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-59.htm">Adding required import statements</a><br>
-    <a href="..\tasks\tasks-58.htm">Managing import statements</a><br>
-    <a href="..\tasks\tasks-60.htm">Organizing existing import statements</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-59.htm">Adding required import statements</a><br>
+    <a href="tasks-58.htm">Managing import statements</a><br>
+    <a href="tasks-60.htm">Organizing existing import statements</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-116.htm">Refactoring actions</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-116.htm">Refactoring actions</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
