--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
@@ -37,19 +37,19 @@
     </span> The local history edition replaces the current one in the editor.</p>
   <p class=para><b>Note:</b> The changed compilation unit has not yet been saved 
     at this point.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-6.htm">Java views</a><br>
-    <a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><a href="../concepts/concepts-6.htm">Java views</a><br>
+    <a href="../concepts/concepts-7.htm">Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-62.htm">Using the local history</a></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-62.htm">Using the local history</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-102.htm">Outline view for Java</a><br>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-102.htm">Outline view for Java</a><br>
     &nbsp;</p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
