--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
@@ -34,17 +34,17 @@ class=label><b>Restore from Local History</b></span>.</p>
     <span class=label><b>Restore</b></span>. The local history edition is loaded 
     into the editor.</p>
   <p class=head><img width=159 height=27 id="_x0000_i1025"
-src="..\images\ngrelc.gif" alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-62.htm">Using the local history</a><br>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-62.htm">Using the local history</a><br>
     &nbsp;</p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-102.htm">Outline view for Java</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-102.htm">Outline view for Java</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
