--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-66.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-66.htm
@@ -15,21 +15,21 @@
 <p class=para>The Java editor supports the formatting of Java code according to
 your personal preferences. </p>
 
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
 
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
-<a href="..\concepts\concepts-7.htm">Java editor</a></p>
+<p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
+<a href="../concepts/concepts-7.htm">Java editor</a></p>
 
 <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
+src="../images/ngrelt.gif" alt="Related tasks"></p>
 
-<p><a href="..\tasks\tasks-68.htm">Setting code formatting preferences</a><br>
-<a href="..\tasks\tasks-67.htm">Formatting files or portions of code</a><br>
-<a href="..\tasks\tasks-65.htm">Using content/code assist</a></p>
+<p><a href="tasks-68.htm">Setting code formatting preferences</a><br>
+<a href="tasks-67.htm">Formatting files or portions of code</a><br>
+<a href="tasks-65.htm">Using content/code assist</a></p>
 
 <p><br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+<img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 
 </div>
 
