--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-7.htm
@@ -17,19 +17,19 @@
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Use the radio buttons that appear under <b>When opening a Type Hierarchy 
     </b>to indicate your preference.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
-    <a href="..\tasks\tasks-40.htm">Opening a type hierarchy on the current text 
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
+    <a href="tasks-40.htm">Opening a type hierarchy on the current text 
     selection</a><br>
-    <a href="..\tasks\tasks-41.htm">Opening a type hierarchy in the workbench</a><br>
-    <a href="..\tasks\tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
-    <a href="..\delete\tasks-37.htm">Using the Hierarchy view</a></p>
+    <a href="tasks-41.htm">Opening a type hierarchy in the workbench</a><br>
+    <a href="tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
+    <a href="../delete\tasks-37.htm">Using the Hierarchy view</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
