--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
@@ -27,21 +27,21 @@
   <p class=para>If there are multiple definitions of the same name, a dialog is 
     shown, and you can select one definition that you want to open. </p>
   <p class=para>An editor opens containing the selected element.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"><br>
+src="../images/ngrelt.gif" alt="Related tasks"><br>
     <br>
-    <a href="..\tasks\tasks-44.htm">Finding overridden methods</a><br>
-    <a href="..\tasks\tasks-54.htm">Using the Java editor</a></p>
+    <a href="tasks-44.htm">Finding overridden methods</a><br>
+    <a href="tasks-54.htm">Using the Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-5.htm">Java editor actions</a><br>
-    <a href="..\reference\ref-26.htm">Syntax highlighting</a><br>
-    <a href="..\reference\ref-24.htm">Views and editors</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-5.htm">Java editor actions</a><br>
+    <a href="../reference/ref-26.htm">Syntax highlighting</a><br>
+    <a href="../reference/ref-24.htm">Views and editors</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
