--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
@@ -20,21 +20,21 @@
   <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Select a package from the list, then click <span class=label><b>OK</b></span>. 
     The selected package is displayed in the Package Explorer.</p>
-  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+  <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
-  <p><a href="..\concepts\concepts-6.htm">Java views</a></p>
+  <p><a href="../concepts/concepts-6.htm">Java views</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
-src="..\images\ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the 
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-74.htm">Showing a type's compilation unit in the 
     Package Explorer</a><br>
-    <a href="..\tasks\tasks-90.htm">Renaming a package</a><br>
-    <a href="..\tasks\tasks-51.htm">Moving folders, packages, and files</a><br>
-    <a href="..\tasks\tasks-15.htm">Creating a new Java package</a></p>
+    <a href="tasks-90.htm">Renaming a package</a><br>
+    <a href="tasks-51.htm">Moving folders, packages, and files</a><br>
+    <a href="tasks-15.htm">Creating a new Java package</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
-src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
